--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="/test-project" />
     <title>test-project</title>
     <meta charset="utf-8" />
   </head>
